使用 Colab 创建而成

--- a/Milestone/Whole_Data.ipynb
+++ b/Milestone/Whole_Data.ipynb
@@ -136,7 +136,7 @@
         }
       ],
       "source": [
-        "# Step 1: Load the Dataset\n",
+        "#Load the Dataset\n",
         "dataset_path = 'data/HateSpeechDatasetBalanced.csv'\n",
         "df = pd.read_csv(dataset_path)\n",
         "print('The shape of the dataset is:', df.shape)"
@@ -1307,21 +1307,15 @@
         "from sklearn.metrics import accuracy_score\n",
         "\n",
         "# Initialize and train the KNN classifier\n",
+        "# Try logistic regression, naive Bayes and knn models\n",
         "knn = KNeighborsClassifier(n_neighbors=10)\n",
         "knn.fit(X_train_bert_embeddings, train_labels)\n",
         "\n",
         "NB = GaussianNB()\n",
         "NB.fit(X_train_bert_embeddings, train_labels)\n",
         "\n",
-        "# Train a classifier on BERT embeddings (you can use any classifier of your choice)\n",
-        "# Here, we'll use Logistic Regression as an example\n",
         "lr = LogisticRegression(max_iter=1000)\n",
-        "lr.fit(X_train_bert_embeddings, train_labels)\n",
-        "\n",
-        "#rf=RandomForestClassifier()\n",
-        "#rf.fit(train_embeddings, train_labels)\n",
-        "#xgb=GradientBoostingClassifier()\n",
-        "#xgb.fit(train_embeddings, train_labels)"
+        "lr.fit(X_train_bert_embeddings, train_labels)"
       ]
     },
     {
@@ -1452,30 +1446,20 @@
         "print(\"\\nConfusion Matrix:\")\n",
         "print(conf_matrix)\n",
         "\n",
-        "#predictions = rf.predict(test_embeddings)\n",
         "predictions = NB.predict(X_test_bert_embeddings)\n",
-        "# Create a classification report\n",
         "class_report = classification_report(test_labels, predictions, target_names=['negative', 'positive'])\n",
-        "\n",
-        "# Create a confusion matrix\n",
         "conf_matrix = confusion_matrix(test_labels, predictions)\n",
         "\n",
-        "# Print the classification report and confusion matrix\n",
         "print(\"Classification Report:\")\n",
         "print(class_report)\n",
         "\n",
         "print(\"\\nConfusion Matrix:\")\n",
         "print(conf_matrix)\n",
         "\n",
-        "#predictions = rf.predict(test_embeddings)\n",
         "predictions = lr.predict(X_test_bert_embeddings)\n",
-        "# Create a classification report\n",
         "class_report = classification_report(test_labels, predictions, target_names=['negative', 'positive'])\n",
-        "\n",
-        "# Create a confusion matrix\n",
         "conf_matrix = confusion_matrix(test_labels, predictions)\n",
         "\n",
-        "# Print the classification report and confusion matrix\n",
         "print(\"Classification Report:\")\n",
         "print(class_report)\n",
         "\n",
@@ -1484,15 +1468,6 @@
         "\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "At present, knn is the best model on the full dataset. More tuning can be performed later to test whether logistic regression can perform better."
-      ],
-      "metadata": {
-        "id": "yyKMMlWR4qdA"
-      }
     }
   ],
   "metadata": {
