使用 Colab 创建而成

--- a/Milestone/Sample_Data.ipynb
+++ b/Milestone/Sample_Data.ipynb
@@ -1763,7 +1763,7 @@
         "id": "KjpA2u2J5-ze",
         "outputId": "2c5e496f-70cf-48f4-c604-deee7adf63a3"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1788,7 +1788,7 @@
         },
         "outputId": "f3acbe71-9d54-4430-b8e3-b79bf1e0032c"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1801,7 +1801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "JX_iPtns1S14"
       },
@@ -1813,7 +1813,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Step 1: Load the Dataset\n",
+        "#Load the Dataset\n",
         "dataset_path = 'data/HateSpeechDatasetBalanced.csv'\n",
         "data = pd.read_csv(dataset_path)\n",
         "print('The shape of the dataset is:', data.shape)"
@@ -1825,7 +1825,7 @@
         },
         "outputId": "a18ad3a1-6bc7-459a-91e6-6b09ed2e050a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1859,7 +1859,7 @@
         "id": "Oa5M6HZBIM5S",
         "outputId": "d0b22e27-c9eb-443c-db2b-72e542d99da4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2254,7 +2254,7 @@
         "id": "FcpLxDAn6vaH",
         "outputId": "47b3059b-818b-40b5-f32b-8025494f4523"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2585,7 +2585,7 @@
         "id": "-B8vVYkn7XCN",
         "outputId": "f8d72807-7001-4703-93bb-1ee986cb1d6f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2662,7 +2662,7 @@
         "id": "1fVQvbGr7cy2",
         "outputId": "857f0d09-8f18-4dd6-9a35-29625a6fe21e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2687,7 +2687,7 @@
         "id": "dE53ChGkAmv6",
         "outputId": "7458ebf5-567b-478f-a24e-a967cdf40162"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2745,7 +2745,7 @@
       "metadata": {
         "id": "MKmlSnupCauT"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2856,7 +2856,7 @@
         },
         "outputId": "df140546-dcf4-4851-a6be-c2c8b900834f"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2969,22 +2969,15 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
-        "# Initialize and train the KNN classifier\n",
+        "## Try logistic regression, naive Bayes and knn models\n",
         "knn = KNeighborsClassifier(n_neighbors=10)\n",
         "knn.fit(X_train_bert_embeddings, train_labels)\n",
         "\n",
         "NB = GaussianNB()\n",
         "NB.fit(X_train_bert_embeddings, train_labels)\n",
         "\n",
-        "# Train a classifier on BERT embeddings (you can use any classifier of your choice)\n",
-        "# Here, we'll use Logistic Regression as an example\n",
         "lr = LogisticRegression(max_iter=1000)\n",
-        "lr.fit(X_train_bert_embeddings, train_labels)\n",
-        "\n",
-        "#rf=RandomForestClassifier()\n",
-        "#rf.fit(train_embeddings, train_labels)\n",
-        "#xgb=GradientBoostingClassifier()\n",
-        "#xgb.fit(train_embeddings, train_labels)"
+        "lr.fit(X_train_bert_embeddings, train_labels)\n"
       ],
       "metadata": {
         "id": "EqARxhi9rp2n",
@@ -2994,7 +2987,7 @@
         },
         "outputId": "28d00723-77d1-4f1d-9ad7-5174697929f8"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3426,12 +3419,12 @@
         "# Calculate accuracy\n",
         "accuracy = accuracy_score(test_labels, predictions)\n",
         "print(f'KNN Accuracy: {accuracy * 100:.2f}%')\n",
-        "#predictions = rf.predict(test_embeddings)\n",
+        "\n",
         "predictions = NB.predict(X_test_bert_embeddings)\n",
         "accuracy = accuracy_score(test_labels, predictions)\n",
         "print(f'Naive Bais Accuracy: {accuracy * 100:.2f}%')\n",
         "\n",
-        "#predictions = rf.predict(test_embeddings)\n",
+        "\n",
         "predictions = lr.predict(X_test_bert_embeddings)\n",
         "accuracy = accuracy_score(test_labels, predictions)\n",
         "print(f'Logistic Regression Accuracy: {accuracy * 100:.2f}%')"
@@ -3443,7 +3436,7 @@
         },
         "outputId": "1dd086d4-8f2a-46fe-e287-dabc424d8104"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3476,30 +3469,21 @@
         "print(\"\\nConfusion Matrix:\")\n",
         "print(conf_matrix)\n",
         "\n",
-        "#predictions = rf.predict(test_embeddings)\n",
         "predictions = NB.predict(X_test_bert_embeddings)\n",
-        "# Create a classification report\n",
         "class_report = classification_report(test_labels, predictions, target_names=['negative', 'positive'])\n",
         "\n",
-        "# Create a confusion matrix\n",
         "conf_matrix = confusion_matrix(test_labels, predictions)\n",
         "\n",
-        "# Print the classification report and confusion matrix\n",
         "print(\"Classification Report:\")\n",
         "print(class_report)\n",
         "\n",
         "print(\"\\nConfusion Matrix:\")\n",
         "print(conf_matrix)\n",
         "\n",
-        "#predictions = rf.predict(test_embeddings)\n",
         "predictions = lr.predict(X_test_bert_embeddings)\n",
-        "# Create a classification report\n",
         "class_report = classification_report(test_labels, predictions, target_names=['negative', 'positive'])\n",
-        "\n",
-        "# Create a confusion matrix\n",
         "conf_matrix = confusion_matrix(test_labels, predictions)\n",
         "\n",
-        "# Print the classification report and confusion matrix\n",
         "print(\"Classification Report:\")\n",
         "print(class_report)\n",
         "\n",
@@ -3515,7 +3499,7 @@
         },
         "outputId": "9bec723b-e44c-4e76-f952-390438fa298e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3581,7 +3565,6 @@
       "source": [
         "lr = LogisticRegression(max_iter=10000)\n",
         "lr.fit(X_train_bert_embeddings, train_labels)\n",
-        "#predictions = rf.predict(test_embeddings)\n",
         "predictions = lr.predict(X_test_bert_embeddings)\n",
         "accuracy = accuracy_score(test_labels, predictions)\n",
         "print(f'Logistic Regression Accuracy: {accuracy * 100:.2f}%')"
@@ -3593,7 +3576,7 @@
         },
         "outputId": "5d4548f3-3f78-4acb-fbb2-524311f70bc4"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3638,7 +3621,7 @@
         "id": "OkB5Zns0riLe",
         "outputId": "0ad88b89-5001-4f90-ec7d-355d56552547"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3665,7 +3648,7 @@
         "id": "VuvoVn0_sMFH",
         "outputId": "7c8d684a-0b57-49eb-85a6-3107ed517867"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3692,7 +3675,7 @@
         "id": "Fn8EBE_sxyQG",
         "outputId": "b82b021b-1f0c-4cbf-eaea-e8ed08f4c4fc"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3730,12 +3713,11 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
         "\n",
-        "# Step 1: Use Count Vectorizer (TF) to transform the text data\n",
+        "#Use Count Vectorizer (TF) to transform the text data\n",
         "vectorizer = CountVectorizer(max_features=5000, ngram_range=(1, 2))\n",
         "X_train_tf = vectorizer.fit_transform(train_data)\n",
         "X_test_tf = vectorizer.transform(test_data)\n",
-        "\n",
-        "# Step 2: Train and evaluate KNN model\n",
+        "## Try logistic regression, naive Bayes and knn models\n",
         "knn = KNeighborsClassifier(n_neighbors=10)\n",
         "knn.fit(X_train_tf, train_labels)\n",
         "knn_predictions = knn.predict(X_test_tf)\n",
@@ -3744,7 +3726,7 @@
         "print(\"KNN Classification Report:\")\n",
         "print(classification_report(test_labels, knn_predictions))\n",
         "\n",
-        "# Step 3: Train and evaluate Naive Bayes model\n",
+        "\n",
         "nb = MultinomialNB()\n",
         "nb.fit(X_train_tf, train_labels)\n",
         "nb_predictions = nb.predict(X_test_tf)\n",
@@ -3753,7 +3735,6 @@
         "print(\"Naive Bayes Classification Report:\")\n",
         "print(classification_report(test_labels, nb_predictions))\n",
         "\n",
-        "# Step 4: Train and evaluate Logistic Regression model\n",
         "lr = LogisticRegression(max_iter=10000)\n",
         "lr.fit(X_train_tf, train_labels)\n",
         "lr_predictions = lr.predict(X_test_tf)\n",
@@ -3769,7 +3750,7 @@
         },
         "outputId": "99af02f3-fcc4-4355-ee76-7a07f437469c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3830,12 +3811,12 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
         "\n",
-        "# Step 1: Use TF-IDF to transform the text data\n",
+        "#Use TF-IDF to transform the text data\n",
         "vectorizer = TfidfVectorizer(max_features=5000, ngram_range=(1, 2))\n",
         "X_train_tfidf = vectorizer.fit_transform(train_data)\n",
         "X_test_tfidf = vectorizer.transform(test_data)\n",
+        "## Try logistic regression, naive Bayes and knn models\n",
         "\n",
-        "# Step 2: Train and evaluate KNN model\n",
         "knn = KNeighborsClassifier(n_neighbors=10)\n",
         "knn.fit(X_train_tfidf, train_labels)\n",
         "knn_predictions = knn.predict(X_test_tfidf)\n",
@@ -3844,7 +3825,6 @@
         "print(\"KNN Classification Report:\")\n",
         "print(classification_report(test_labels, knn_predictions))\n",
         "\n",
-        "# Step 3: Train and evaluate Naive Bayes model\n",
         "nb = MultinomialNB()\n",
         "nb.fit(X_train_tfidf, train_labels)\n",
         "nb_predictions = nb.predict(X_test_tfidf)\n",
@@ -3853,7 +3833,6 @@
         "print(\"Naive Bayes Classification Report:\")\n",
         "print(classification_report(test_labels, nb_predictions))\n",
         "\n",
-        "# Step 4: Train and evaluate Logistic Regression model\n",
         "lr = LogisticRegression(max_iter=10000)\n",
         "lr.fit(X_train_tfidf, train_labels)\n",
         "lr_predictions = lr.predict(X_test_tfidf)\n",
@@ -3869,7 +3848,7 @@
         },
         "outputId": "c5062caf-fa21-4004-80e4-951c7fb7da83"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
