--- a/posters/sample_dataset_sentence_transformers.ipynb
+++ b/posters/sample_dataset_sentence_transformers.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMc469zMLVeyEhkwiW1diH2",
+      "authorship_tag": "ABX9TyPNLIHOH9gIMrETqvSw6p8U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ke-wen/ke-wen/blob/main/posters/sentence_transformers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ke-wen/ke-wen/blob/main/posters/sample_dataset_sentence_transformers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -569,6 +569,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import classification_report, accuracy_score\n",
@@ -579,14 +580,11 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "model = SentenceTransformer(\"sentence-transformers/all-MiniLM-L6-v2\", device=device)\n",
         "def generate_embeddings(sentences):\n",
-        "    return model.encode(sentences, convert_to_tensor=True, device=device)\n",
+        "    embeddings = model.encode(sentences, convert_to_tensor=True, device=device)\n",
+        "    return embeddings.cpu().numpy()\n",
         "\n",
         "train_embeddings = generate_embeddings(train_data.tolist())\n",
-        "test_embeddings = generate_embeddings(test_data.tolist())\n",
-        "\n",
-        "# have to convert embeddings to CPU tensors because sklearn does not support GPU tensors\n",
-        "train_embeddings = train_embeddings.cpu().numpy()\n",
-        "test_embeddings = test_embeddings.cpu().numpy()\n"
+        "test_embeddings = generate_embeddings(test_data.tolist())"
       ],
       "metadata": {
         "id": "xkuRno_9d7af",
