使用 Colab 创建而成

--- a/posters/sample_dataset_Bert_TF_TF-IDF.ipynb
+++ b/posters/sample_dataset_Bert_TF_TF-IDF.ipynb
@@ -1763,7 +1763,7 @@
         "id": "KjpA2u2J5-ze",
         "outputId": "65101fa6-dcc7-4003-b02a-24d5359960eb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1788,7 +1788,7 @@
         },
         "outputId": "f272fd02-0afd-4167-a9fc-f0d3e540dfb2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1801,7 +1801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "JX_iPtns1S14"
       },
@@ -1825,7 +1825,7 @@
         },
         "outputId": "2a93b613-e1f7-4a22-92c1-20767374aa2e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1859,7 +1859,7 @@
         "id": "Oa5M6HZBIM5S",
         "outputId": "cc572e4f-2b79-4ab5-a2b8-de935c1fb661"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2254,7 +2254,7 @@
         "id": "FcpLxDAn6vaH",
         "outputId": "e3f03721-2f33-4db4-d331-780b25465ea4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2585,7 +2585,7 @@
         "id": "-B8vVYkn7XCN",
         "outputId": "dfcfce2a-8d34-4d6e-eb0c-d96afd13061e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2662,7 +2662,7 @@
         "id": "1fVQvbGr7cy2",
         "outputId": "e404ec81-77a2-4954-e62c-a9513c449952"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2687,7 +2687,7 @@
         "id": "dE53ChGkAmv6",
         "outputId": "97a386a7-3a2a-4f7a-ce9b-3a408607ceec"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2745,7 +2745,7 @@
       "metadata": {
         "id": "MKmlSnupCauT"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2856,7 +2856,7 @@
         },
         "outputId": "74329b46-eeb6-43bc-f4d2-ec5afbaf4302"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2979,7 +2979,7 @@
         },
         "outputId": "b3949a7a-cf6a-47c3-bc86-2b30a8918239"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3428,7 +3428,7 @@
         },
         "outputId": "69d70671-fe93-48fb-f08e-c7b7a2941fb2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3491,7 +3491,7 @@
         },
         "outputId": "bb692dff-367d-427f-eb36-3cd1894617b2"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3549,7 +3549,7 @@
         "from sklearn.svm import SVC\n",
         "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
         "\n",
-        "# 1. Support Vector Machine (SVM)\n",
+        "# Support Vector Machine (SVM)\n",
         "svm = SVC(kernel='linear', max_iter=1000, random_state=42)\n",
         "svm.fit(X_train_bert_embeddings, train_labels)\n",
         "svm_predictions = svm.predict(X_test_bert_embeddings)\n",
@@ -3558,7 +3558,7 @@
         "print(\"SVM Classification Report:\")\n",
         "print(classification_report(test_labels, svm_predictions))\n",
         "\n",
-        "# 2. Gradient Boosting (GB)\n",
+        "# Gradient Boosting (GB)\n",
         "gb = GradientBoostingClassifier(n_estimators=30, learning_rate=0.05, max_depth=2, random_state=42)\n",
         "gb.fit(X_train_bert_embeddings, train_labels)\n",
         "gb_predictions = gb.predict(X_test_bert_embeddings)\n",
@@ -3567,7 +3567,7 @@
         "print(\"Gradient Boosting Classification Report:\")\n",
         "print(classification_report(test_labels, gb_predictions))\n",
         "\n",
-        "# 3. Random Forest (RF)\n",
+        "# Random Forest (RF)\n",
         "rf = RandomForestClassifier(n_estimators=30, random_state=42)\n",
         "rf.fit(X_train_bert_embeddings, train_labels)\n",
         "rf_predictions = rf.predict(X_test_bert_embeddings)\n",
@@ -3583,7 +3583,7 @@
         "id": "FeHGnifPFnOL",
         "outputId": "3ee47361-869e-4a02-f251-f55810a901d8"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3659,7 +3659,7 @@
         },
         "outputId": "14cb01d6-7e7a-4608-a498-276a8ba2d3fb"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3704,7 +3704,7 @@
         "id": "OkB5Zns0riLe",
         "outputId": "4019437a-701d-4702-ff8f-90c60ef04985"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3731,7 +3731,7 @@
         "id": "VuvoVn0_sMFH",
         "outputId": "87f5a3e2-ae99-43b9-c549-df7613d2a73a"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3758,7 +3758,7 @@
         "id": "Fn8EBE_sxyQG",
         "outputId": "b1cb9f8b-981d-4c72-c4f3-48baeeffcb20"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3805,7 +3805,7 @@
         "id": "1x68ZsWKOQLs",
         "outputId": "a82fb046-c80a-4fd1-a93f-c96337448f94"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3931,7 +3931,7 @@
         },
         "outputId": "e0bba4da-901d-4f84-fe5f-a443f9a1110b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4109,7 +4109,7 @@
         },
         "outputId": "9f231c47-b80e-4aca-8d54-5a365186ee97"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
