使用 Colab 创建而成

--- a/posters/plot.ipynb
+++ b/posters/plot.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNpGjXf8SWQgB9qcY+5XPx+",
+      "authorship_tag": "ABX9TyOeyiiqnybUVyBBC+bPcFg5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1191,7 +1191,7 @@
         "id": "AnE135c4GJB9",
         "outputId": "b98ef3a1-a3d5-49f9-894e-aa15dea1e60b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1216,7 +1216,7 @@
         "id": "_V4spN6ZGUpy",
         "outputId": "bf1b1f7c-5238-4aa8-9992-825c025c72d6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1229,7 +1229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1257,7 +1257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "JX_iPtns1S14"
       },
@@ -1268,7 +1268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1294,7 +1294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1645,7 +1645,7 @@
         "id": "jsEoJHcDYsKz",
         "outputId": "5906627a-abfe-4d29-9257-fa1fab89168e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1662,7 +1662,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Word Cloud"
+        "Word Cloud.The most frequent words in the data set according each label"
       ],
       "metadata": {
         "id": "q8hrP0pyXkaD"
@@ -1718,7 +1718,7 @@
         "id": "6OtMoGqeS0VQ",
         "outputId": "b69d49ca-d405-48b8-c98c-d8dcaad88e6f"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1787,7 +1787,7 @@
         "id": "lhys0H_darr5",
         "outputId": "7e77601c-44e2-4900-f4b0-20aa7f32bd24"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1846,7 +1846,7 @@
         "id": "Ktm3RJ95ZlVD",
         "outputId": "dd4eb246-bcbb-4579-ce03-94df283bfebe"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1905,7 +1905,7 @@
         "id": "5QKIYRsObK-1",
         "outputId": "d738389d-cc3a-4d4c-975c-38f268c31984"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1974,7 +1974,7 @@
         "id": "WreqJLWxbzRQ",
         "outputId": "1b8408de-08de-40f2-9e9c-8f73cbea0c2e"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2033,7 +2033,7 @@
         "id": "5UiCFLw6djQK",
         "outputId": "0732b513-5f92-4713-d3b7-ea4ae3cc9d26"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2089,7 +2089,7 @@
         "id": "PkObmdLSfw18",
         "outputId": "a50692c1-91f1-4892-e756-a4f9d94d269c"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
